MD-2004-03-10-0: Bugfix:    really bad typo
                 Issue:     #793
                 Changed:   inst_sge

JG-2004-03-10-2: Testsuite: Some fixes for the testsuite queue handling and
                            tests bugs/issuezilla/193 and functional/migration.

JG-2004-03-10-1: Enhancem.: Added datastructures for the reporting of long 
                            running jobs.
                            Added an optimization for JG-2004-03-10-0.
                 Changed:   all

EB-2004-03-10-1: Bugfix:    Unsuspend on subordinate is broken
                 Issue:     807
                 Changed:   sge_qmaster
                 Review:    AH 

SG-2004-03-10-1: Bugfix:    the japi event client does get qmaster goes down 
                            events and client shut down events. Part of 788
                 Changed:   qmaster

SG-2004-03-10-0: Bugfix:    scheduler crashed during functional ticket 
                            computation on AMD64 - linux
                 Changed:   scheduler
                 Review:    CR
                 Issue:     820

EB-2004-03-10-0: Bugfix:    qconf -mq rejects valid configuration
                 Issue:     815
                 Changed:   qconf
                 Review:    SG

JG-2004-03-10-0: Bugfix:    Signalling a slave task of a parallel job did not
                            signal job.
                 Issue:     810
                 Changed:   sge_qmaster
                 Review:    EB

MD-2004-03-09-0: Bugfix:    install_execd ignores ignore_fqdn in bootstrap(5)
                 Issue:     805
                 Changed:   inst_sge
         
AH-2004-03-09-1: Bugfix:    Fixed qsub -w v to print more than one single 
                            reason. 
                            Fix problem with qstat -j scheduling info being
                            truncated.
                 Issues:    811, 812
                 Review:    EB
