@@ -1,5 +1,10 @@
+EB-2004-03-10-2: Bugfix:    calendar handling is broken
+                 Issue:     825
+                 Changed:   sge_qmaster
+                 Review:    AH 
+
 MD-2004-03-10-0: Bugfix:    really bad typo
-                 Issue:     #793
+                 Issue:     793
                  Changed:   inst_sge
 
 JG-2004-03-10-2: Testsuite: Some fixes for the testsuite queue handling and
